# SilentFix

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: tests.yml
benchmark/: runner.py
benchmark/cases/: simple_bugs.py
silentfix/: __init__.py  config.py  main.py
silentfix/core/: engine.py  types.py  utils.py
silentfix/detection/: hypothesis_tester.py  outlier_detector.py  reflection.py  symbolic_executor.py
silentfix/llm/: client.py  prompts.py
silentfix/localization/: divergence.py  ranker.py  sbfl.py
silentfix/property_inference/: dynamic_miner.py  fusion.py  llm_extractor.py  pattern_retrieval.py  static_extractor.py  type_inferrer.py
silentfix/synthesis/: constraint_solver.py  llm_agent.py  synthesizer.py  template_fixer.py
silentfix/tracing/: tracer.py
silentfix/validation/: ranker.py  regression.py
tests/: test_benchmark.py  test_integration.py  test_property_inference.py  test_synthesis.py
